--- a/cloudbuild_mim.yaml
+++ b/cloudbuild_mim.yaml
@@ -14,7 +14,15 @@
 steps:
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'bash'
-  args: ['./deploy_via_trigger.sh', '-p$PROJECT_ID']
-serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/cloudbuild-trigger-default@$PROJECT_ID.iam.gserviceaccount.com'
+  args:
+    - '-c'
+    - |
+      echo "Starting deploy script..."
+      chmod +x ./deploy_via_trigger.sh  # Ensure the script is executable
+      ./deploy_via_trigger.sh -p "$PROJECT_ID" || { echo "Script failed"; exit 1; }
+      echo "Deploy script completed successfully."
+
+serviceAccount: 'cloudbuild-trigger-default@$PROJECT_ID.iam.gserviceaccount.com'
+
 options:
   logging: CLOUD_LOGGING_ONLY
